--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
     <footer>
-        <p>Stworzone przez <a href="https://discord.com/users/1328758394588500024">Wojtoteka_</a> <a href="https://discord.com/users/1328758394588500024" class="discord-link"><i class="fab fa-discord"></i> Kontakt z Dev</a></p>
+        <p>Stworzone przez <a href="https://wojtoteka.ovh/">Wojtoteka_</a> <a href="https://discord.com/users/1328758394588500024" class="discord-link"><i class="fab fa-discord"></i> Kontakt z Dev</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
