--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <a href="https://radio.wojtoteka.ovh/" class="social-link" title="Słuchaj online">
                     <i class="fas fa-broadcast-tower"></i>
                 </a>
+                <a href="https://discord.gg/EHUJZeRQF2" class="social-link" title="Serwer Support">
+                    <i class="fab fa-discord"></i>
+                </a>
             </div>
             <a href="https://discord.com/users/1328758394588500024" class="discord-link">
                 <i class="fab fa-discord"></i> Kontakt z Dev
