--- a/index.html
+++ b/index.html
@@ -178,6 +178,42 @@
         </div>
     </section>
 
+    <section class="legal-section">
+        <div class="legal-content">
+            <h2><i class="fas fa-file-contract"></i> Dokumenty Prawne</h2>
+            <div class="legal-grid">
+                <div class="legal-card">
+                    <a href="regulamin.html" class="legal-link">
+                        <div class="legal-icon">
+                            <i class="fas fa-scroll"></i>
+                        </div>
+                        <div class="legal-info">
+                            <h3>Regulamin</h3>
+                            <p>Zasady korzystania z bota Radio WojtotekaFM</p>
+                        </div>
+                        <i class="fas fa-external-link-alt link-arrow"></i>
+                    </a>
+                </div>
+
+                <div class="legal-card">
+                    <a href="polityka-prywatnosci.html" class="legal-link">
+                        <div class="legal-icon">
+                            <i class="fas fa-shield-alt"></i>
+                        </div>
+                        <div class="legal-info">
+                            <h3>Polityka Prywatności</h3>
+                            <p>Jak chronimy i przetwarzamy Twoje dane</p>
+                        </div>
+                        <i class="fas fa-external-link-alt link-arrow"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="legal-notice">
+                <p><i class="fas fa-info-circle"></i> Korzystając z bota akceptujesz powyższe dokumenty prawne</p>
+            </div>
+        </div>
+    </section>
+
     <section class="stats">
         <h2>Statystyki Systemu</h2>
         <div class="stats-grid">
