--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -21,7 +21,7 @@
 
         <div class="legal-document">
             <h2>1. Informacje ogólne</h2>
-            <p>1.1. Niniejsza polityka prywatności określa, jakie dane zbieramy, w jaki sposób je wykorzystujemy i chronimy podczas korzystania z bota <strong>Radio WojtotekaFM</strong>.</p>
+            <p>1.1. Niniejsza polityka prywatności określa, jakie dane zbieramy, w jaki sposób je wykorzystujemy i chronimy podczas korzystania z bota <strong>WojtotekaFM</strong>.</p>
             <p>1.2. Administratorem danych jest zespół WojtotekaFM.</p>
             <p>1.3. Kontakt w sprawach prywatności: <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
 
@@ -107,7 +107,7 @@
             </ul>
             <h3>5.2. Automatyczne usuwanie:</h3>
             <ul>
-                <li>Nieaktywne sesje usuwane po 6 godzinach</li>
+                <li>Nieaktywne sesje usuwane po 5 minutachh</li>
                 <li>Wygasłe licencje sprawdzane codziennie</li>
                 <li>Stare logi aktywności czyszczone co 10 minut</li>
             </ul>
@@ -212,7 +212,7 @@
             <h2>12. Kontakt w sprawach prywatności</h2>
             <h3>12.1. W sprawach ochrony danych skontaktuj się:</h3>
             <p><strong>Serwer Discord:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a><br>
-            <strong>Kanał:</strong> #support lub prywatna wiadomość do administratorów</p>
+            <strong>Kanał:</strong> #🎫・tickety lub prywatna wiadomość do administratorów</p>
             <h3>12.2. Podaj w wiadomości:</h3>
             <ul>
                 <li>Swoje ID użytkownika Discord</li>
@@ -232,9 +232,9 @@
             <p>14.3. Korzystanie z bota oznacza akceptację niniejszej polityki prywatności.</p>
 
             <div class="legal-footer-info">
-                <p><strong>Radio WojtotekaFM Bot</strong> - Twoja prywatność jest dla nas ważna! 🔒</p>
-                <p><strong>Ostatnia aktualizacja:</strong> 03.06.2025</p>
-                <p><strong>Wersja:</strong> 1.0</p>
+                <p><strong>WojtotekaFM Bot</strong> - Twoja prywatność jest dla nas ważna! 🔒</p>
+                <p><strong>Ostatnia aktualizacja:</strong> 08.06.2025</p>
+                <p><strong>Wersja:</strong> 1.1</p>
                 <p><strong>Kontakt:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
             </div>
         </div>
