--- a/regulamin.html
+++ b/regulamin.html
@@ -43,7 +43,6 @@
                 <li><code>/radio247</code> - sesje 24/7 bez timeoutu bezczynności</li>
                 <li>Automatyczne przywracanie sesji po restarcie bota</li>
                 <li>Maksymalnie 2 równoczesne sesje 24/7 na użytkownika</li>
-                <li>Właściciel bota ma nielimitowane sesje</li>
             </ul>
             <p>3.2. <strong>Typy licencji:</strong></p>
             <ul>
@@ -105,14 +104,10 @@
                 <li>Podanie swojego ID użytkownika Discord</li>
             </ul>
 
-            <h2>7. Komendy administratorskie</h2>
-            <p>7.1. <strong>Tylko właściciel bota może:</strong></p>
-            <ul>
-                <li>Dodawać/usuwać użytkowników z blacklisty (<code>/add</code>, <code>/remove</code>)</li>
-                <li>Sprawdzać statystyki nadużyć innych użytkowników</li>
-                <li>Zarządzać licencjami Premium</li>
-                <li>Wymuszać odświeżenie komend (<code>/refresh</code>)</li>
-            </ul>
+            <h2>7. Ograniczenia techniczne</h2>
+            <p>7.1. Bot może być czasowo niedostępny z powodów technicznych.</p>
+            <p>7.2. Limity Discord API mogą wpływać na funkcjonalność bota.</p>
+            <p>7.3. Sesje mogą być przerywane w przypadku problemów z serwerem.</p>
 
             <h2>8. Odpowiedzialność</h2>
             <p>8.1. Bot jest udostępniany "jak jest", bez gwarancji ciągłości działania.</p>
@@ -128,7 +123,6 @@
             <p>9.1. <strong>Pomoc dostępna przez:</strong></p>
             <ul>
                 <li>Serwer Discord: <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></li>
-                <li>Strona internetowa: <a href="https://wojtotekafm.wojtoteka.ovh/" target="_blank">https://wojtotekafm.wojtoteka.ovh/</a></li>
                 <li>Kontakt z administratorami na serwerze wsparcia</li>
             </ul>
             <p>9.2. <strong>Zgłaszanie błędów:</strong></p>
@@ -145,13 +139,13 @@
 
             <h2>11. Postanowienia końcowe</h2>
             <p>11.1. W sprawach nieuregulowanych w niniejszym regulaminie zastosowanie mają zasady Discord Terms of Service.</p>
-            <p>11.2. Regulamin wchodzi w życie z dniem 03.06.2025.</p>
+            <p>11.2. Regulamin wchodzi w życie z dniem 08.06.2025.</p>
             <p>11.3. Wszelkie spory rozstrzygane są w pierwszej kolejności przez administratorów bota.</p>
 
             <div class="legal-footer-info">
                 <p><strong>Radio WojtotekaFM Bot</strong> - Twoje radio w Discord!</p>
                 <p><strong>Kontakt:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
-                <p><strong>Wersja regulaminu:</strong> 1.0 (03.06.2025)</p>
+                <p><strong>Wersja regulaminu:</strong> 1.1 (08.06.2025)</p>
             </div>
         </div>
     </div>
