--- a/polityka-prywatnosci.html
+++ b/polityka-prywatnosci.html
@@ -22,8 +22,8 @@
         <div class="legal-document">
             <h2>1. Informacje ogólne</h2>
             <p>1.1. Niniejsza polityka prywatności określa, jakie dane zbieramy, w jaki sposób je wykorzystujemy i chronimy podczas korzystania z bota <strong>WojtotekaFM</strong>.</p>
-            <p>1.2. Administratorem danych jest zespół WojtotekaFM.</p>
-            <p>1.3. Kontakt w sprawach prywatności: <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
+            <p>1.2. Administratorem danych osobowych jest użytkownik Discord o nazwie <strong>Wojtoteka</strong>, prowadzący bota <strong>WojtotekaFM</strong>, zlokalizowany w Miastku/Wrocławiu, Polska.</p>
+            <p>1.3. Kontakt w sprawach prywatności możliwy jest poprzez wiadomość prywatną na Discordzie do twórcy bota. Czas odpowiedzi: do 7 dni roboczych.</p>
 
             <h2>2. Zbierane dane</h2>
             <h3>2.1. Dane automatycznie zbierane przez bota:</h3>
@@ -92,9 +92,9 @@
             </ul>
 
             <h2>4. Podstawy prawne przetwarzania</h2>
-            <p>4.1. <strong>Prawnie uzasadniony interes</strong> - zapewnienie bezpieczeństwa i prawidłowego funkcjonowania usługi.</p>
-            <p>4.2. <strong>Wykonanie umowy</strong> - realizacja usług związanych z działaniem bota.</p>
-            <p>4.3. <strong>Zgoda użytkownika</strong> - korzystanie z bota oznacza zgodę na przetwarzanie niezbędnych danych.</p>
+            <p>4.1. <strong>Prawnie uzasadniony interes</strong> – zapewnienie bezpieczeństwa i prawidłowego funkcjonowania usługi.</p>
+            <p>4.2. <strong>Wykonanie umowy</strong> – realizacja usług związanych z działaniem bota.</p>
+            <p>4.3. <strong>Zgoda użytkownika</strong> – korzystanie z bota oznacza zgodę na przetwarzanie niezbędnych danych.</p>
 
             <h2>5. Okres przechowywania danych</h2>
             <h3>5.1. Okresy przechowywania:</h3>
@@ -107,7 +107,7 @@
             </ul>
             <h3>5.2. Automatyczne usuwanie:</h3>
             <ul>
-                <li>Nieaktywne sesje usuwane po 5 minutachh</li>
+                <li>Nieaktywne sesje usuwane po 5 minutach</li>
                 <li>Wygasłe licencje sprawdzane codziennie</li>
                 <li>Stare logi aktywności czyszczone co 10 minut</li>
             </ul>
@@ -145,39 +145,32 @@
             <p><strong>Organizacyjne:</strong></p>
             <ul>
                 <li>Ograniczony dostęp do danych</li>
-                <li>Szkolenia zespołu w zakresie ochrony danych</li>
+                <li>Szkolenia w zakresie ochrony danych</li>
                 <li>Procedury reagowania na incydenty</li>
                 <li>Regularne audyty bezpieczeństwa</li>
-            </ul>
-            <h3>7.2. Pliki lokalne:</h3>
-            <ul>
-                <li>Dane przechowywane w plikach tekstowych na serwerze</li>
-                <li>Dostęp tylko dla autoryzowanych administratorów</li>
-                <li>Regularne kopie zapasowe</li>
-                <li>Szyfrowanie dysku serwera</li>
             </ul>
 
             <h2>8. Prawa użytkowników</h2>
             <h3>8.1. Masz prawo do:</h3>
             <ul>
-                <li><strong>Dostępu do danych</strong> - sprawdzenie jakie dane o Tobie przechowujemy</li>
-                <li><strong>Sprostowania</strong> - poprawienia nieprawidłowych danych</li>
-                <li><strong>Usunięcia</strong> - żądania usunięcia swoich danych</li>
-                <li><strong>Ograniczenia przetwarzania</strong> - wstrzymania niektórych operacji</li>
-                <li><strong>Przenośności</strong> - otrzymania kopii swoich danych</li>
-                <li><strong>Sprzeciwu</strong> - wobec przetwarzania w określonych celach</li>
+                <li><strong>Dostępu do danych</strong> – sprawdzenia, jakie dane o Tobie przechowujemy</li>
+                <li><strong>Sprostowania</strong> – poprawienia nieprawidłowych danych</li>
+                <li><strong>Usunięcia</strong> – żądania usunięcia swoich danych</li>
+                <li><strong>Ograniczenia przetwarzania</strong> – wstrzymania niektórych operacji</li>
+                <li><strong>Przenośności</strong> – otrzymania kopii swoich danych</li>
+                <li><strong>Sprzeciwu</strong> – wobec przetwarzania w określonych celach</li>
             </ul>
             <h3>8.2. Realizacja praw:</h3>
             <ul>
-                <li>Skontaktuj się z administratorami na serwerze Discord</li>
+                <li>Skontaktuj się z administratorem bota na Discordzie</li>
                 <li>Podaj swoje ID użytkownika Discord</li>
                 <li>Opisz szczegółowo żądanie</li>
                 <li>Odpowiedź w ciągu 30 dni</li>
             </ul>
             <h3>8.3. Ograniczenia:</h3>
             <ul>
-                <li>Nie możemy usunąć danych z blacklisty (bezpieczeństwo)</li>
-                <li>Niektóre dane są niezbędne dla działania bota</li>
+                <li>Dane z blacklisty nie mogą być usunięte (ze względów bezpieczeństwa)</li>
+                <li>Niektóre dane są niezbędne do działania bota</li>
                 <li>Logi bezpieczeństwa mogą być zachowane dłużej</li>
             </ul>
 
@@ -212,7 +205,7 @@
             <h2>12. Kontakt w sprawach prywatności</h2>
             <h3>12.1. W sprawach ochrony danych skontaktuj się:</h3>
             <p><strong>Serwer Discord:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a><br>
-            <strong>Kanał:</strong> #🎫・tickety lub prywatna wiadomość do administratorów</p>
+            <strong>Kanał:</strong> #🎫・tickety lub prywatna wiadomość do administratora</p>
             <h3>12.2. Podaj w wiadomości:</h3>
             <ul>
                 <li>Swoje ID użytkownika Discord</li>
@@ -222,9 +215,9 @@
             </ul>
 
             <h2>13. Zgodność z przepisami</h2>
-            <p>13.1. <strong>RODO (GDPR)</strong> - pełna zgodność z europejskim prawem ochrony danych</p>
-            <p>13.2. <strong>Discord Terms of Service</strong> - zgodność z regulaminem Discord</p>
-            <p>13.3. <strong>Prawo polskie</strong> - zgodność z krajowymi przepisami o ochronie danych</p>
+            <p>13.1. <strong>RODO (GDPR)</strong> – pełna zgodność z europejskim prawem ochrony danych</p>
+            <p>13.2. <strong>Discord Terms of Service</strong> – zgodność z regulaminem Discord</p>
+            <p>13.3. <strong>Prawo polskie</strong> – zgodność z krajowymi przepisami o ochronie danych</p>
 
             <h2>14. Postanowienia końcowe</h2>
             <p>14.1. Niniejsza polityka stanowi integralną część regulaminu bota.</p>
@@ -232,10 +225,8 @@
             <p>14.3. Korzystanie z bota oznacza akceptację niniejszej polityki prywatności.</p>
 
             <div class="legal-footer-info">
-                <p><strong>WojtotekaFM Bot</strong> - Twoja prywatność jest dla nas ważna! 🔒</p>
-                <p><strong>Ostatnia aktualizacja:</strong> 08.06.2025</p>
-                <p><strong>Wersja:</strong> 1.1</p>
-                <p><strong>Kontakt:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
+                <p><strong>WojtotekaFM Bot</strong> – Twoja prywatność jest dla nas ważna! 🔒</p>
+                <p><strong>Ostatnia aktualizacja:</strong> 26 czerwca 2025</p>
             </div>
         </div>
     </div>
