--- a/regulamin.html
+++ b/regulamin.html
@@ -21,33 +21,33 @@
 
         <div class="legal-document">
             <h2>1. Postanowienia ogólne</h2>
-            <p>1.1. Niniejszy regulamin określa zasady korzystania z bota Discord o nazwie <strong>Radio WojtotekaFM</strong> (dalej: "Bot").</p>
+            <p>1.1. Niniejszy regulamin określa zasady korzystania z bota Discord o nazwie <strong>WojtotekaFM</strong> (dalej: "Bot").</p>
             <p>1.2. Bot służy do odtwarzania radia internetowego WojtotekaFM na serwerach Discord.</p>
             <p>1.3. Korzystając z Bota, użytkownik potwierdza, że zapoznał się z niniejszym regulaminem i zobowiązuje się do jego przestrzegania.</p>
 
             <h2>2. Funkcje podstawowe</h2>
             <p>2.1. <strong>Dostępne komendy dla wszystkich użytkowników:</strong></p>
             <ul>
-                <li><code>/radio</code> - uruchamia radio w kanale głosowym</li>
-                <li><code>/stop</code> - zatrzymuje radio (tylko dla osoby, która je uruchomiła)</li>
-                <li><code>/mystop</code> - zatrzymuje wszystkie sesje użytkownika</li>
-                <li><code>/ping</code> - sprawdza opóźnienie bota</li>
-                <li><code>/help</code> - wyświetla pomoc</li>
-                <li><code>/license</code> - sprawdza status licencji Premium</li>
+                <li><code>/radio</code> – uruchamia radio w kanale głosowym</li>
+                <li><code>/stop</code> – zatrzymuje radio (tylko dla osoby, która je uruchomiła)</li>
+                <li><code>/mystop</code> – zatrzymuje wszystkie sesje użytkownika</li>
+                <li><code>/ping</code> – sprawdza opóźnienie bota</li>
+                <li><code>/help</code> – wyświetla pomoc</li>
+                <li><code>/license</code> – sprawdza status licencji Premium</li>
             </ul>
             <p>2.2. Bot automatycznie rozłącza się po 5 minutach bezczynności (brak użytkowników w kanale głosowym).</p>
 
             <h2>3. Funkcje Premium</h2>
             <p>3.1. <strong>Licencje Premium oferują dodatkowe funkcje:</strong></p>
             <ul>
-                <li><code>/radio247</code> - sesje 24/7 bez timeoutu bezczynności</li>
+                <li><code>/radio247</code> – sesje 24/7 bez timeoutu bezczynności</li>
                 <li>Automatyczne przywracanie sesji po restarcie bota</li>
                 <li>Maksymalnie 2 równoczesne sesje 24/7 na użytkownika</li>
             </ul>
             <p>3.2. <strong>Typy licencji:</strong></p>
             <ul>
-                <li><strong>Czasowa</strong> - ważna przez określony czas</li>
-                <li><strong>Bezterminowa</strong> - ważna bez ograniczeń czasowych</li>
+                <li><strong>Czasowa</strong> – ważna przez określony czas</li>
+                <li><strong>Bezterminowa</strong> – ważna bez ograniczeń czasowych</li>
             </ul>
             <p>3.3. Licencje Premium są przyznawane przez administratorów bota.</p>
 
@@ -68,24 +68,14 @@
             </ul>
 
             <h2>5. System antyabuse</h2>
-            <p>5.1. Bot posiada wbudowany system wykrywania nadużyć, który monitoruje:</p>
+            <p>5.1. Bot posiada system wykrywania nadużyć, który monitoruje aktywność użytkowników w celu zapobiegania nadużyciom.</p>
+            <p>5.2. Szczegółowe progi wykrywania nadużyć są poufne i nie są udostępniane publicznie, aby zapobiegać ich omijaniu.</p>
+            <p>5.3. Użytkownicy powinni korzystać z Bota w sposób umiarkowany i zgodny z zasadami regulaminu oraz obowiązującymi przepisami, w tym RODO i innymi regulacjami dotyczącymi ochrony danych osobowych.</p>
+            <p>5.4. Nadużycia mogą skutkować m.in.:</p>
             <ul>
-                <li>Częstotliwość używania komend</li>
-                <li>Liczbę równoczesnych sesji</li>
-                <li>Aktywność na wielu serwerach jednocześnie</li>
-            </ul>
-            <p>5.2. <strong>Progi wykrywania nadużyć:</strong></p>
-            <ul>
-                <li>Maksymalnie 15 komend na minutę</li>
-                <li>Maksymalnie 100 komend na godzinę</li>
-                <li>Maksymalnie 8 równoczesnych sesji</li>
-                <li>Maksymalnie 5 sesji uruchomionych w 5 minut</li>
-            </ul>
-            <p>5.3. <strong>Konsekwencje nadużyć:</strong></p>
-            <ul>
-                <li>Automatyczne dodanie do blacklisty przy 100 punktach nadużyć</li>
-                <li>Zakończenie wszystkich aktywnych sesji użytkownika</li>
-                <li>Powiadomienie na prywatną wiadomość o dodaniu do blacklisty</li>
+                <li>Dodaniem do blacklisty</li>
+                <li>Zakończeniem aktywnych sesji</li>
+                <li>Powiadomieniem użytkownika o naruszeniu zasad</li>
             </ul>
 
             <h2>6. Blacklista</h2>
@@ -139,13 +129,12 @@
 
             <h2>11. Postanowienia końcowe</h2>
             <p>11.1. W sprawach nieuregulowanych w niniejszym regulaminie zastosowanie mają zasady Discord Terms of Service.</p>
-            <p>11.2. Regulamin wchodzi w życie z dniem 08.06.2025.</p>
-            <p>11.3. Wszelkie spory rozstrzygane są w pierwszej kolejności przez administratorów bota.</p>
+            <p>11.2. Wszelkie spory rozstrzygane są w pierwszej kolejności przez administratorów bota.</p>
 
             <div class="legal-footer-info">
-                <p><strong>Radio WojtotekaFM Bot</strong> - Twoje radio w Discord!</p>
+                <p><strong>WojtotekaFM Bot</strong> – Twoje radio w Discord!</p>
                 <p><strong>Kontakt:</strong> <a href="https://discord.gg/EHUJZeRQF2" target="_blank">https://discord.gg/EHUJZeRQF2</a></p>
-                <p><strong>Wersja regulaminu:</strong> 1.1 (08.06.2025)</p>
+                <p><strong>Ostatnia aktualizacja:</strong> 26 czerwca 2025</p>
             </div>
         </div>
     </div>
